--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <link rel="icon" type="image/svg+xml" href="src/assets/favicon.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Guppy</title>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Alice&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <div id="root"></div>
