--- a/index.html
+++ b/index.html
@@ -4,7 +4,52 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="src/assets/favicon.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Guppy</title>
+        <title>Guppy | 79th ENG's Student Services Chatbot</title>
+
+        <!-- SEO -->
+        <meta
+            name="description"
+            content="Guppy is an AI-powered chatbot made by 79th ENG to assist engineering students by providing quick and accurate answers to common queries."
+        />
+        <meta
+            name="keywords"
+            content="Guppy, ENGbox, USG, ENG, 79th, GCOE, DLSU, Engineering, Student Services, Engineering Chatbot"
+        />
+        <meta name="author" content="79th ENG" />
+
+        <!-- Open Graph / Facebook -->
+        <meta
+            property="og:title"
+            content="Guppy | 79th ENG's Student Services Chatbot"
+        />
+        <meta
+            property="og:description"
+            content="Guppy is an AI-powered chatbot made by 79th ENG to assist engineering students by providing quick and accurate answers to common queries."
+        />
+        <meta
+            property="og:image"
+            content="https://i.ibb.co/LhnfTpHF/brand.png"
+        />
+        <meta property="og:url" content="https://chatguppy.vercel.app/" />
+        <meta property="og:type" content="website" />
+
+        <!-- Twitter -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta
+            name="twitter:title"
+            content="Guppy | 79th ENG's Student Services Chatbot"
+        />
+        <meta
+            name="twitter:description"
+            content="Guppy is an AI-powered chatbot made by 79th ENG to assist engineering students by providing quick and accurate answers to common queries."
+        />
+        <meta
+            name="twitter:image"
+            content="https://i.ibb.co/LhnfTpHF/brand.png"
+        />
+        <meta name="twitter:url" content="https://chatguppy.vercel.app/" />
+
+        <!-- Fonts -->
         <link
             href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Alice&display=swap"
             rel="stylesheet"
