--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
 
         <!-- Fonts -->
         <link
-            href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Alice&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap"
             rel="stylesheet"
         />
     </head>
