add favicon complete set

--- a/index.html
+++ b/index.html
@@ -2,7 +2,47 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="src/assets/favicon.svg" />
+
+        <!-- Standard favicon -->
+        <link
+            rel="icon"
+            href="/src/assets/favicon_io/favicon.ico"
+            type="image/x-icon"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="/src/assets/favicon_io/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="/src/assets/favicon_io/favicon-16x16.png"
+        />
+
+        <!-- For iOS (iPhone, iPad) -->
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="/src/assets/favicon_io/apple-touch-icon.png"
+        />
+
+        <!-- For Android and modern mobile -->
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="192x192"
+            href="/src/assets/favicon_io/android-chrome-192x192.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="512x512"
+            href="/src/assets/favicon_io/android-chrome-512x512.png"
+        />
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Guppy | 79th ENG's Student Services Chatbot</title>
 
