--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <!-- Fonts -->
         <link
-            href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Nunito&display=swap"
             rel="stylesheet"
         />
         <link
